--- a/about.html
+++ b/about.html
@@ -305,7 +305,7 @@
     <header class="header">
         <nav class="nav container">
             <div class="nav-left">
-                <a href="index.html" class="logo">First Principle</a>
+                <a href="index.html" class="logo">First Principle Asset Management</a>
             </div>
             <ul class="nav-links">
                 <li><a href="about.html">About</a></li>
@@ -383,8 +383,8 @@
                         <div class="origin-step">
                             <div class="origin-step-number">2</div>
                             <div class="origin-step-content">
-                                <h3>Repeatable Frameworks</h3>
-                                <p>Those portfolios were built one client at a time, with direct access to banks, structured-product desks, and institutional due diligence. The result was a set of repeatable frameworks for using structured notes as portfolio enhancements rather than one-off trades.</p>
+                                <h3>Systematic Frameworks</h3>
+                                <p>Those portfolios were built one client at a time, with direct access to banks, structured-product desks, and institutional due diligence. The result was a set of systematic frameworks for using structured notes as portfolio enhancements rather than one-off trades.</p>
                             </div>
                         </div>
                         <div class="origin-step">
