--- a/institutional/product.html
+++ b/institutional/product.html
@@ -555,7 +555,7 @@
     <header class="header">
         <nav class="nav container">
             <div class="nav-left">
-                <a href="index.html" class="logo">First Principle</a>
+                <a href="index.html" class="logo">First Principle Asset Management</a>
             </div>
             <ul class="nav-links">
                 <li><a href="../about.html">About</a></li>
@@ -588,7 +588,7 @@
                 <div class="strategy-intro-text-wrapper">
                     <p class="strategy-intro-text">
                         First Principle Asset Management designs structured-note sleeves as regime-aware overlays for institutional portfolios. 
-                        Rather than one-off trades, we build diversified programs that harvest volatility premia, define downside participation, and 
+                        Rather than one-off trades, we build diversified programs that are designed to harvest volatility premia, define downside participation, and 
                         remain anchored to the client's benchmark and risk budget. The goal is not to replace core equity or fixed income, but to 
                         reshape the path of returns, compress drawdowns, and fund higher cash flow from existing allocations.
                     </p>
@@ -694,6 +694,13 @@
                         supplemented by sector or factor baskets when appropriate. Index selection is driven by benchmark alignment, liquidity, and 
                         diversification objectives—not by single-name views.
                     </p>
+                    <p style="margin-top: 1rem; font-size: 0.9rem; color: #B0B0B0; font-style: italic;">
+                        <strong>Index Definitions:</strong> The S&amp;P 500 Index (SPX) is a market-capitalization-weighted index of 500 large-cap U.S. companies. 
+                        The NASDAQ-100 Index (NDX) is a market-capitalization-weighted index of 100 of the largest non-financial companies listed on NASDAQ. 
+                        The Russell 2000 Index (RUT) is a market-capitalization-weighted index of approximately 2,000 small-cap U.S. companies. 
+                        The Euro Stoxx 50 Index (SX5E) is a market-capitalization-weighted index of 50 large-cap companies from Eurozone countries. 
+                        All indices are unmanaged, are not available for direct investment, and do not reflect the deduction of fees and expenses.
+                    </p>
                 </div>
 
                 <div class="instrument-detail">
@@ -711,7 +718,7 @@
                     <p>
                         Income is generated via the sale of put and call options. Coupons may be unconditional or linked to the index remaining above 
                         a reference level, and are typically paid quarterly. Autocall features allow early redemption if indices trade at or above 
-                        pre-defined levels, accelerating realized returns in benign regimes and creating natural roll opportunities.
+                        pre-defined levels, potentially accelerating realized returns in benign regimes and creating natural roll opportunities.
                     </p>
                 </div>
 
@@ -719,7 +726,7 @@
                     <h4>Program Rules, Not One-Off Trades</h4>
                     <p>
                         Each sleeve is governed by a playbook: allowed underlyings, maturity ranges, barrier bands, coupon targets, issuer list, and risk limits. 
-                        New issuance and rolls are executed within this ruleset, creating repeatability and a clear mapping from policy decisions 
+                        New issuance and rolls are executed within this ruleset, creating continuity and a clear mapping from policy decisions 
                         to individual notes.
                     </p>
                 </div>
@@ -885,7 +892,7 @@
             <div class="container">
                 <h2 class="section-header">Portfolio Construction Framework</h2>
                 <p class="section-subheader">
-                    Every sleeve is built through a repeatable process that connects investment policy to payoff engineering and day-to-day rollout. 
+                    Every sleeve is built through a systematic process that connects investment policy to payoff engineering and day-to-day rollout. 
                     The same framework can be used to underwrite an SMA, AMC, or sub-advised sleeve.
                 </p>
 
@@ -919,7 +926,7 @@
                             <h3>Construct Diversified Sleeves</h3>
                             <p>
                                 Allocate across issuers, indices, maturities, and payoff types, subject to concentration and correlation limits. 
-                                Laddered issuance and size constraints keep the sleeve diversified across time and counterparties.
+                                Laddered issuance and size constraints are designed to keep the sleeve diversified across time and counterparties.
                             </p>
                         </div>
                     </div>
@@ -941,7 +948,7 @@
                     <div class="construction-card">
                         <h4>Laddering &amp; Liquidity</h4>
                         <ul>
-                            <li>Stagger maturities across 1–5 years to avoid cliff risk.</li>
+                            <li>Stagger maturities across 1–5 years with the goal of avoiding cliff risk.</li>
                             <li>Blend primary issuance with secondary opportunities where appropriate.</li>
                             <li>Maintain rolling liquidity profile consistent with client guidelines.</li>
                         </ul>
@@ -1009,6 +1016,22 @@
         </section>
     </main>
 
+    <!-- DISCLOSURES -->
+    <section class="section dark-bg" style="padding: 3rem 0; border-top: 1px solid rgba(255, 255, 255, 0.1);">
+        <div class="container">
+            <div style="max-width: 1000px; margin: 0 auto;">
+                <h3 style="color: #C8A678; font-size: 1.1rem; margin-bottom: 1.5rem; font-family: 'Nunito Sans', sans-serif;">Important Disclosures</h3>
+                <div style="color: #B0B0B0; font-size: 0.85rem; line-height: 1.8; font-family: 'Nunito Sans', sans-serif;">
+                    <p style="margin-bottom: 1rem;"><strong>Not an Offer, Recommendation, or Professional Advice:</strong> The information contained on this website is for informational purposes only and does not constitute an offer to sell, a solicitation of an offer to buy, or a recommendation to purchase any security or investment product. Nothing on this website should be construed as investment, legal, tax, or other professional advice.</p>
+                    <p style="margin-bottom: 1rem;"><strong>Use of Third-Party Information:</strong> This website may contain information from third-party sources. First Principle Asset Management does not guarantee the accuracy, completeness, or timeliness of such information and is not responsible for any errors or omissions.</p>
+                    <p style="margin-bottom: 1rem;"><strong>Confidentiality:</strong> The information on this website is confidential and proprietary. Unauthorized use, reproduction, or distribution of this information is prohibited.</p>
+                    <p style="margin-bottom: 1rem;"><strong>Past Performance:</strong> Past performance is not indicative of future results. All investments involve risk, including the possible loss of principal. There can be no assurance that any investment strategy will be successful or that any investment will achieve its objectives.</p>
+                    <p><strong>Forward-Looking Statements:</strong> This website may contain forward-looking statements that are based on current expectations and projections about future events. These statements are subject to risks, uncertainties, and assumptions that could cause actual results to differ materially from those expressed or implied. First Principle Asset Management does not undertake any obligation to update any forward-looking statements.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- FOOTER -->
     <footer class="footer">
         <div class="container">
@@ -1018,7 +1041,9 @@
 
     <script src="../js/investor-type.js"></script>
     <script>
-        // Investor type toggle
+        // ARCHIVED: Investor type toggle disabled (retail mode disabled - launching to institutional clients only)
+        // To re-enable, uncomment below and set RETAIL_ENABLED to true in investor-type.js
+        /*
         document.addEventListener('DOMContentLoaded', function() {
             const toggle = document.getElementById('investor-type-indicator');
             if (toggle && window.FPInvestorType && typeof window.FPInvestorType.handleInvestorTypeToggle === 'function') {
@@ -1026,7 +1051,10 @@
                     window.FPInvestorType.handleInvestorTypeToggle();
                 });
             }
+        });
+        */
 
+        document.addEventListener('DOMContentLoaded', function() {
             // Regime matrix view toggle
             const regimeButtons = document.querySelectorAll('[data-regime-view]');
             const qual = document.getElementById('regimeMatrixQualitative');
