--- a/retail/index.html
+++ b/retail/index.html
@@ -13,7 +13,7 @@
 <header class="header">
 <nav class="nav container">
 <div class="nav-left">
-<a href="index.html" class="logo">First Principle</a>
+<a href="index.html" class="logo">First Principle Asset Management</a>
 </div>
 <ul class="nav-links">
 <li><a href="../about.html">About</a></li>
