--- a/institutional/index.html
+++ b/institutional/index.html
@@ -245,7 +245,7 @@
     <header class="header">
         <nav class="nav container">
             <div class="nav-left">
-                <a href="index.html" class="logo">First Principle</a>
+                <a href="index.html" class="logo">First Principle Asset Management</a>
             </div>
             <ul class="nav-links">
                 <li><a href="../about.html">About</a></li>
@@ -281,7 +281,7 @@
                             for a New Market Regime
                         </h1>
                         <p class="hero-subheader-new" style="font-size: 1.2rem; max-width: 800px; margin: 0 auto 2.5rem;">
-                            First Principle designs structured-note portfolios that convert equity volatility into systematic, repeatable income and asymmetric payoff profiles. Our approach is built for today&#8217;s volatility and correlation regime, and is engineered to integrate into existing equity and credit allocations&#8212;not replace them.
+                            First Principle designs structured-note portfolios that convert equity volatility into systematic, stable income and asymmetric payoff profiles. We believe our approach is suited for today&#8217;s volatility and correlation regime, and is engineered to integrate into existing equity and credit allocations&#8212;not replace them.
                         </p>
                         <div class="hero-buttons-new">
                             <a href="product.html" class="btn btn-primary">Explore the Strategy</a>
@@ -298,7 +298,7 @@
                 <h2 class="section-header">The Regime Shift</h2>
                 <p class="section-subheader">
                     Capital market assumptions have shifted materially. Forward equity returns are lower, volatility is structurally
-                    higher, and traditional diversification is less reliable. The portfolio construction playbook that worked in the
+                    higher, and traditional diversification is less reliable. We believe that the portfolio construction playbook that worked in the
                     Quantitative Easing era requires recalibration for today&#8217;s and tomorrow&#8217;s regime.
                 </p>
 
@@ -400,7 +400,7 @@
             <div class="container">
                 <h2 class="section-header">Our Solution: Payoff Engineering</h2>
                 <p class="section-subheader">
-                    We construct diversified, rules-based portfolios of structured notes that harvest index option premium across major indices
+                    We construct diversified, rules-based portfolios of structured notes that are designed to harvest index option premium across major indices
                     (SPX, NDX, RUT, SX5E). The objective is to convert volatility and skew into stable income and convex payoff profiles while
                     keeping the overall portfolio aligned with existing policy benchmarks and risk budgets.
                 </p>
@@ -410,7 +410,7 @@
                         <p>
                             We implement disciplined option-selling programs across diversified index underlyings, targeting the structural gap
                             between implied and realized volatility rather than short-term market calls. Position sizing, tenor, and strike
-                            selection are driven by a repeatable framework that anchors to risk budget and path-dependent drawdown controls.
+                            selection are driven by a systematic framework that anchors to risk budget and path-dependent drawdown controls.
                         </p>
                     </div>
                     <div class="pillar-card">
@@ -426,7 +426,7 @@
                         <h3>Institutional Integration & Governance</h3>
                         <p>
                             Structured-note sleeves are sized and slotted into existing equity or fixed income allocations&#8212;not layered on top.
-                            We provide position-level transparency, issuer diversification, and attribution that can be mapped into existing risk,
+                            We aim to provide position-level transparency, issuer diversification, and attribution that can be mapped into existing risk,
                             performance, and compliance systems, enabling CIOs and investment committees to monitor the sleeve alongside core
                             exposures.
                         </p>
@@ -440,7 +440,7 @@
             <div class="container">
                 <h2 class="section-header">Implementation Use Cases</h2>
                 <p class="section-subheader" style="max-width: 800px; margin: 0 auto;">
-                    Start with the problem you&#8217;re trying to solve. Structured-note portfolios can be used to enhance income,
+                    Start with the problem you&#8217;re trying to solve. It is our belief that structured-note portfolios can be used to enhance income,
                     reshape equity risk, or simplify alternative credit exposure. Choose the role that best fits your mandate, then
                     see how the sleeve behaves in our portfolio simulator.
                 </p>
@@ -454,7 +454,7 @@
                         <p class="use-case-how">
                             <strong>How we implement it:</strong> Replace 10&#8211;20% of traditional fixed income with structured income sleeves,
                             targeting higher cash yields with defined barrier levels and no duration risk. The sleeve is sized to remain within 
-                            existing fixed income risk budgets while improving income and drawdown characteristics.
+                            existing fixed income risk budgets with the potential to improve income and drawdown characteristics.
                         </p>
                         <div class="use-case-actions">
                             <a href="simulator.html#bond-sleeve"
@@ -472,7 +472,7 @@
                         </p>
                         <p class="use-case-how">
                             <strong>How we implement it:</strong> Reallocate 15&#8211;25% of core equity exposure into structured equity sleeves,
-                            maintaining equity-like return potential while introducing buffers, path-dependent income, and improved downside asymmetry.
+                            maintaining equity-like return potential while introducing buffers, path-dependent income, and potentially improved downside asymmetry.
                             The objective is to reshape the distribution of equity outcomes, not simply add leverage.
                         </p>
                         <div class="use-case-actions">
@@ -492,7 +492,7 @@
                         <p class="use-case-how">
                             <strong>How we implement it:</strong> Substitute structured income portfolios for portions of high-yield or alternative credit allocations,
                             targeting comparable or higher yields with more transparent payoff mechanics and explicit barrier-based risk parameters.
-                            This can simplify risk oversight while preserving income.
+                            This is designed to have the potential to both simplify risk and preserve income.
                         </p>
                         <div class="use-case-actions">
                             <a href="simulator.html#alt-credit"
@@ -523,6 +523,22 @@
         </section>
     </main>
 
+    <!-- DISCLOSURES -->
+    <section class="section dark-bg" style="padding: 3rem 0; border-top: 1px solid rgba(255, 255, 255, 0.1);">
+        <div class="container">
+            <div style="max-width: 1000px; margin: 0 auto;">
+                <h3 style="color: #C8A678; font-size: 1.1rem; margin-bottom: 1.5rem; font-family: 'Nunito Sans', sans-serif;">Important Disclosures</h3>
+                <div style="color: #B0B0B0; font-size: 0.85rem; line-height: 1.8; font-family: 'Nunito Sans', sans-serif;">
+                    <p style="margin-bottom: 1rem;"><strong>Not an Offer, Recommendation, or Professional Advice:</strong> The information contained on this website is for informational purposes only and does not constitute an offer to sell, a solicitation of an offer to buy, or a recommendation to purchase any security or investment product. Nothing on this website should be construed as investment, legal, tax, or other professional advice.</p>
+                    <p style="margin-bottom: 1rem;"><strong>Use of Third-Party Information:</strong> This website may contain information from third-party sources. First Principle Asset Management does not guarantee the accuracy, completeness, or timeliness of such information and is not responsible for any errors or omissions.</p>
+                    <p style="margin-bottom: 1rem;"><strong>Confidentiality:</strong> The information on this website is confidential and proprietary. Unauthorized use, reproduction, or distribution of this information is prohibited.</p>
+                    <p style="margin-bottom: 1rem;"><strong>Past Performance:</strong> Past performance is not indicative of future results. All investments involve risk, including the possible loss of principal. There can be no assurance that any investment strategy will be successful or that any investment will achieve its objectives.</p>
+                    <p><strong>Forward-Looking Statements:</strong> This website may contain forward-looking statements that are based on current expectations and projections about future events. These statements are subject to risks, uncertainties, and assumptions that could cause actual results to differ materially from those expressed or implied. First Principle Asset Management does not undertake any obligation to update any forward-looking statements.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- FOOTER -->
     <footer class="footer">
         <div class="container">
@@ -532,7 +548,9 @@
 
     <script src="../js/investor-type.js"></script>
     <script>
-        // Set up investor type toggle
+        // ARCHIVED: Investor type toggle disabled (retail mode disabled - launching to institutional clients only)
+        // To re-enable, uncomment below and set RETAIL_ENABLED to true in investor-type.js
+        /*
         document.addEventListener('DOMContentLoaded', function() {
             const toggle = document.getElementById('investor-type-indicator');
             if (toggle) {
@@ -541,6 +559,7 @@
                 });
             }
         });
+        */
     </script>
 </body>
 </html>
