--- a/resources.html
+++ b/resources.html
@@ -13,7 +13,7 @@
     <header class="header">
         <nav class="nav container">
             <div class="nav-left">
-                <a href="index.html" class="logo">First Principle</a>
+                <a href="index.html" class="logo">First Principle Asset Management</a>
             </div>
             <ul class="nav-links">
                 <li><a href="about.html">About</a></li>
@@ -43,11 +43,11 @@
         <section class="resources-section-new">
             <div class="container">
                 <h2 class="section-title fade-on-scroll">Resources for Advisors</h2>
-                <p class="resources-subtitle fade-on-scroll delay-1">Analytical frameworks and implementation guidance for structured SMA solutions. Our resources provide the technical depth and institutional perspective required to understand and deploy structured products within an advisory practice.</p>
+                <p class="resources-subtitle fade-on-scroll delay-1">Analytical frameworks and implementation guidance for structured SMA solutions. Our resources aim to provide the technical depth and institutional perspective required to understand and deploy structured products within an advisory practice.</p>
                 <div class="whitepapers-grid">
                     <div class="whitepaper-card fade-on-scroll">
                         <h3 class="whitepaper-title">Structured Products 101</h3>
-                        <p class="whitepaper-description">A comprehensive introduction to structured products, covering fundamental concepts, building blocks, and institutional implementation frameworks. Essential reading for advisors evaluating structured solutions.</p>
+                        <p class="whitepaper-description">A sophisticated introduction to structured products, covering fundamental concepts, building blocks, and institutional implementation frameworks. We believe this is essential reading for advisors evaluating structured solutions.</p>
                         <a href="#" class="whitepaper-link">Download PDF</a>
                     </div>
                     <div class="whitepaper-card fade-on-scroll delay-1">
