Screaming Frog Updates

--- a/contact.html
+++ b/contact.html
@@ -13,23 +13,23 @@
     <header class="header">
         <nav class="nav container">
             <div class="nav-left">
-                <a href="index.html" class="logo">First Principle Asset Management</a>
+                <a href="/" class="logo">First Principle Asset Management</a>
             </div>
             <ul class="nav-links">
-                <li><a href="about.html">About</a></li>
+                <li><a href="/about.html">About</a></li>
                 <li class="nav-item-with-dropdown">
-                    <a href="#" id="strategy-link">Strategy</a>
+                    <a href="/institutional/product.html" id="strategy-link">Strategy</a>
                     <ul class="nav-dropdown">
-                        <li><a href="#" id="strategy-link-core">Core Strategies</a></li>
-                        <li><a href="#" id="strategy-link-opt">Portfolio Optimization</a></li>
-                        <li><a href="#" id="strategy-link-framework">The First Principle Framework</a></li>
-                        <li><a href="#" id="strategy-link-behavior">Behavior Across Markets</a></li>
-                        <li><a href="#" id="strategy-link-impl">Implementation for Advisors</a></li>
+                        <li><a href="/institutional/product.html#instruments-mechanics" id="strategy-link-core">Instruments & Mechanics</a></li>
+                        <li><a href="/institutional/product.html#risk-return" id="strategy-link-opt">Risk & Return Drivers</a></li>
+                        <li><a href="/institutional/product.html#portfolio-construction" id="strategy-link-framework">Portfolio Construction</a></li>
+                        <li><a href="/institutional/product.html#implementation" id="strategy-link-behavior">Implementation</a></li>
+                        <li><a href="/retail/product.html#core-strategies" id="strategy-link-impl">Core Strategies (Retail)</a></li>
                     </ul>
                 </li>
-                <li><a href="#" id="simulator-link">Portfolio Simulator</a></li>
-                <li><a href="resources.html">Resources</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="/institutional/simulator.html" id="simulator-link">Portfolio Simulator</a></li>
+                <li><a href="/resources.html">Resources</a></li>
+                <li><a href="/contact.html">Contact</a></li>
             </ul>
             <div class="nav-right">
                 <a href="contact.html" class="cta-button">Advisor Inquiry</a>
@@ -86,7 +86,17 @@
     <!-- FOOTER -->
     <footer class="footer">
         <div class="container">
-            <p>First Principle Asset Management · An Invictus Collective Company · Chicago, IL</p>
+            <div style="display: flex; justify-content: space-between; align-items: center; flex-wrap: wrap; gap: 1rem;">
+                <p style="margin: 0;">First Principle Asset Management · An Invictus Collective Company · Chicago, IL</p>
+                <nav style="display: flex; gap: 1.5rem; flex-wrap: wrap;">
+                    <a href="/" style="color: #B0B0B0; text-decoration: none;">Home</a>
+                    <a href="/about.html" style="color: #B0B0B0; text-decoration: none;">About</a>
+                    <a href="/institutional/product.html" style="color: #B0B0B0; text-decoration: none;">Strategy</a>
+                    <a href="/institutional/simulator.html" style="color: #B0B0B0; text-decoration: none;">Simulator</a>
+                    <a href="/resources.html" style="color: #B0B0B0; text-decoration: none;">Resources</a>
+                    <a href="/contact.html" style="color: #B0B0B0; text-decoration: none;">Contact</a>
+                </nav>
+            </div>
         </div>
     </footer>
 
