--- a/institutional/index.html
+++ b/institutional/index.html
@@ -245,25 +245,25 @@
     <header class="header">
         <nav class="nav container">
             <div class="nav-left">
-                <a href="index.html" class="logo">First Principle Asset Management</a>
+                <a href="/" class="logo">First Principle Asset Management</a>
             </div>
             <ul class="nav-links">
-                <li><a href="../about.html">About</a></li>
+                <li><a href="/about.html">About</a></li>
                 <li class="nav-item-with-dropdown">
-                    <a href="product.html">Strategy</a>
+                    <a href="/institutional/product.html">Strategy</a>
                     <ul class="nav-dropdown">
-                        <li><a href="product.html#instruments-mechanics">Instruments & Mechanics</a></li>
-                        <li><a href="product.html#risk-return">Risk & Return Drivers</a></li>
-                        <li><a href="product.html#portfolio-construction">Portfolio Construction</a></li>
-                        <li><a href="product.html#implementation">Implementation</a></li>
+                        <li><a href="/institutional/product.html#instruments-mechanics">Instruments & Mechanics</a></li>
+                        <li><a href="/institutional/product.html#risk-return">Risk & Return Drivers</a></li>
+                        <li><a href="/institutional/product.html#portfolio-construction">Portfolio Construction</a></li>
+                        <li><a href="/institutional/product.html#implementation">Implementation</a></li>
                     </ul>
                 </li>
-                <li><a href="simulator.html">Portfolio Simulator</a></li>
-                <li><a href="../resources.html">Resources</a></li>
-                <li><a href="../contact.html">Contact</a></li>
+                <li><a href="/institutional/simulator.html">Portfolio Simulator</a></li>
+                <li><a href="/resources.html">Resources</a></li>
+                <li><a href="/contact.html">Contact</a></li>
             </ul>
             <div class="nav-right">
-                <a href="../contact.html" class="cta-button">Schedule a Call</a>
+                <a href="/contact.html" class="cta-button">Schedule a Call</a>
                 <span id="investor-type-indicator" class="investor-type-indicator institutional" style="cursor: pointer;"></span>
             </div>
         </nav>
@@ -284,8 +284,8 @@
                             First Principle designs structured-note portfolios that convert equity volatility into systematic, stable income and asymmetric payoff profiles. We believe our approach is suited for today&#8217;s volatility and correlation regime, and is engineered to integrate into existing equity and credit allocations&#8212;not replace them.
                         </p>
                         <div class="hero-buttons-new">
-                            <a href="product.html" class="btn btn-primary">Explore the Strategy</a>
-                            <a href="simulator.html" class="btn btn-secondary">Run a Portfolio Simulation</a>
+                            <a href="/institutional/product.html" class="btn btn-primary">Explore the Strategy</a>
+                            <a href="/institutional/simulator.html" class="btn btn-secondary">Run a Portfolio Simulation</a>
                         </div>
                     </div>
                 </div>
@@ -457,7 +457,7 @@
                             existing fixed income risk budgets with the potential to improve income and drawdown characteristics.
                         </p>
                         <div class="use-case-actions">
-                            <a href="simulator.html#bond-sleeve"
+                            <a href="/institutional/simulator.html#bond-sleeve"
                                class="btn btn-outline-gold btn-small"
                                data-implementation-mode="bond-sleeve">
                                 View Bond Sleeve Example
@@ -476,7 +476,7 @@
                             The objective is to reshape the distribution of equity outcomes, not simply add leverage.
                         </p>
                         <div class="use-case-actions">
-                            <a href="simulator.html#equity-carveout"
+                            <a href="/institutional/simulator.html#equity-carveout"
                                class="btn btn-outline-gold btn-small"
                                data-implementation-mode="equitycarveout">
                                 View Equity Carve-Out Example
@@ -495,7 +495,7 @@
                             This is designed to have the potential to both simplify risk and preserve income.
                         </p>
                         <div class="use-case-actions">
-                            <a href="simulator.html#alt-credit"
+                            <a href="/institutional/simulator.html#alt-credit"
                                class="btn btn-outline-gold btn-small"
                                data-implementation-mode="altcredit">
                                 View Alt Credit Example
@@ -515,8 +515,8 @@
                         Connect with our team to discuss how structured-note portfolios can be integrated into your institutional allocation framework. We provide detailed analytics, scenario analysis, and implementation roadmaps.
                     </p>
                     <div style="display: flex; gap: 1rem; justify-content: center; margin-top: 2rem; flex-wrap: wrap;">
-                        <a href="../contact.html" class="btn btn-primary">Schedule a Call</a>
-                        <a href="product.html" class="btn btn-secondary">View Strategy Details</a>
+                        <a href="/contact.html" class="btn btn-primary">Schedule a Call</a>
+                        <a href="/institutional/product.html" class="btn btn-secondary">View Strategy Details</a>
                     </div>
                 </div>
             </div>
@@ -542,7 +542,17 @@
     <!-- FOOTER -->
     <footer class="footer">
         <div class="container">
-            <p>First Principle Asset Management · An Invictus Collective Company · Chicago, IL</p>
+            <div style="display: flex; justify-content: space-between; align-items: center; flex-wrap: wrap; gap: 1rem;">
+                <p style="margin: 0;">First Principle Asset Management · An Invictus Collective Company · Chicago, IL</p>
+                <nav style="display: flex; gap: 1.5rem; flex-wrap: wrap;">
+                    <a href="/" style="color: #B0B0B0; text-decoration: none;">Home</a>
+                    <a href="/about.html" style="color: #B0B0B0; text-decoration: none;">About</a>
+                    <a href="/institutional/product.html" style="color: #B0B0B0; text-decoration: none;">Strategy</a>
+                    <a href="/institutional/simulator.html" style="color: #B0B0B0; text-decoration: none;">Simulator</a>
+                    <a href="/resources.html" style="color: #B0B0B0; text-decoration: none;">Resources</a>
+                    <a href="/contact.html" style="color: #B0B0B0; text-decoration: none;">Contact</a>
+                </nav>
+            </div>
         </div>
     </footer>
 
