--- a/retail/index.html
+++ b/retail/index.html
@@ -13,26 +13,26 @@
 <header class="header">
 <nav class="nav container">
 <div class="nav-left">
-<a href="index.html" class="logo">First Principle Asset Management</a>
+<a href="/" class="logo">First Principle Asset Management</a>
 </div>
 <ul class="nav-links">
-<li><a href="../about.html">About</a></li>
+<li><a href="/about.html">About</a></li>
 <li class="nav-item-with-dropdown">
-<a href="product.html">Strategy</a>
+<a href="/retail/product.html">Strategy</a>
 <ul class="nav-dropdown">
-<li><a href="product.html#core-strategies">Core Strategies</a></li>
-<li><a href="product.html#portfolio-optimization">Portfolio Optimization</a></li>
-<li><a href="product.html#first-principle-framework">The First Principle Framework</a></li>
-<li><a href="product.html#behavior-across-markets">Behavior Across Markets</a></li>
-<li><a href="product.html#implementation-for-advisors">Implementation for Advisors</a></li>
+<li><a href="/retail/product.html#core-strategies">Core Strategies</a></li>
+<li><a href="/retail/product.html#portfolio-optimization">Portfolio Optimization</a></li>
+<li><a href="/retail/product.html#first-principle-framework">The First Principle Framework</a></li>
+<li><a href="/retail/product.html#behavior-across-markets">Behavior Across Markets</a></li>
+<li><a href="/retail/product.html#implementation-for-advisors">Implementation for Advisors</a></li>
 </ul>
 </li>
-<li><a href="simulator.html">Portfolio Simulator</a></li>
-<li><a href="../resources.html">Resources</a></li>
-<li><a href="../contact.html">Contact</a></li>
+<li><a href="/retail/simulator.html">Portfolio Simulator</a></li>
+<li><a href="/resources.html">Resources</a></li>
+<li><a href="/contact.html">Contact</a></li>
 </ul>
 <div class="nav-right">
-<a href="../contact.html" class="cta-button">Advisor Inquiry</a>
+<a href="/contact.html" class="cta-button">Advisor Inquiry</a>
 <span id="investor-type-indicator" class="investor-type-indicator retail" style="cursor: pointer;"></span>
 </div>
 </nav>
@@ -47,8 +47,8 @@
 <h1 class="hero-title-new">Portfolio Enhancement for a New Market Regime</h1>
 <p class="hero-subheader-new">First Principle Asset Management designs structured-note portfolios that convert market volatility into stable income and improved risk-adjusted returns. We help advisors and individual investors replace a portion of traditional equity and bond exposure with engineered, downside-aware payoff profiles.</p>
 <div class="hero-buttons-new">
-<a href="product.html" class="btn btn-primary">How the Strategy Works</a>
-<a href="simulator.html" class="btn btn-secondary">See Portfolio Impact</a>
+<a href="/retail/product.html" class="btn btn-primary">How the Strategy Works</a>
+<a href="/retail/simulator.html" class="btn btn-secondary">See Portfolio Impact</a>
 </div>
 </div>
 </div>
@@ -162,7 +162,7 @@
 <h2 class="section-header">Explore What Matters to You</h2>
 <p class="section-subheader"> Choose where to begin: our team, the portfolio impact of structured note allocations, or the mechanics of the strategy. </p>
 <div class="cta-grid">
-<a href="../about.html" class="cta-card">
+<a href="/about.html" class="cta-card">
 <div class="cta-icon">
 <svg width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
 <path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"></path>
@@ -174,7 +174,7 @@
 <h3>Why We Win</h3>
 <p> Learn how our structured-product expertise, multi-family office background, and institutional portfolio-engineering process allow First Principle to enhance advisor portfolios in ways traditional note providers cannot. </p>
 </a>
-<a href="simulator.html" class="cta-card">
+<a href="/retail/simulator.html" class="cta-card">
 <div class="cta-icon">
 <svg width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
 <line x1="18" y1="20" x2="18" y2="10"></line>
@@ -185,7 +185,7 @@
 <h3>See Portfolio Impact</h3>
 <p> Evaluate how reallocating part of your equity or credit exposure into structured-note portfolios can reshape income, volatility, and downside behavior in our interactive simulator. </p>
 </a>
-<a href="product.html" class="cta-card">
+<a href="/retail/product.html" class="cta-card">
 <div class="cta-icon">
 <svg width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
 <circle cx="12" cy="12" r="3"></circle>
@@ -202,7 +202,17 @@
 <!-- FOOTER -->
 <footer class="footer">
 <div class="container">
-<p>First Principle Asset Management · An Invictus Collective Company · Chicago, IL</p>
+<div style="display: flex; justify-content: space-between; align-items: center; flex-wrap: wrap; gap: 1rem;">
+<p style="margin: 0;">First Principle Asset Management · An Invictus Collective Company · Chicago, IL</p>
+<nav style="display: flex; gap: 1.5rem; flex-wrap: wrap;">
+<a href="/" style="color: #B0B0B0; text-decoration: none;">Home</a>
+<a href="/about.html" style="color: #B0B0B0; text-decoration: none;">About</a>
+<a href="/retail/product.html" style="color: #B0B0B0; text-decoration: none;">Strategy</a>
+<a href="/retail/simulator.html" style="color: #B0B0B0; text-decoration: none;">Simulator</a>
+<a href="/resources.html" style="color: #B0B0B0; text-decoration: none;">Resources</a>
+<a href="/contact.html" style="color: #B0B0B0; text-decoration: none;">Contact</a>
+</nav>
+</div>
 </div>
 </footer>
 <!-- Approach Narrative Scroll Animation -->
