--- a/retail/simulator.html
+++ b/retail/simulator.html
@@ -54,26 +54,26 @@
     <header class="header">
         <nav class="nav container">
             <div class="nav-left">
-                <a href="index.html" class="logo">First Principle Asset Management</a>
+                <a href="/" class="logo">First Principle Asset Management</a>
             </div>
             <ul class="nav-links">
-                <li><a href="../about.html">About</a></li>
+                <li><a href="/about.html">About</a></li>
                 <li class="nav-item-with-dropdown">
-                    <a href="product.html">Strategy</a>
+                    <a href="/retail/product.html">Strategy</a>
                     <ul class="nav-dropdown">
-                        <li><a href="product.html#core-strategies">Core Strategies</a></li>
-                        <li><a href="product.html#portfolio-optimization">Portfolio Optimization</a></li>
-                        <li><a href="product.html#first-principle-framework">The First Principle Framework</a></li>
-                        <li><a href="product.html#behavior-across-markets">Behavior Across Markets</a></li>
-                        <li><a href="product.html#implementation-for-advisors">Implementation for Advisors</a></li>
+                        <li><a href="/retail/product.html#core-strategies">Core Strategies</a></li>
+                        <li><a href="/retail/product.html#portfolio-optimization">Portfolio Optimization</a></li>
+                        <li><a href="/retail/product.html#first-principle-framework">The First Principle Framework</a></li>
+                        <li><a href="/retail/product.html#behavior-across-markets">Behavior Across Markets</a></li>
+                        <li><a href="/retail/product.html#implementation-for-advisors">Implementation for Advisors</a></li>
                     </ul>
                 </li>
-                <li><a href="simulator.html">Portfolio Simulator</a></li>
-                <li><a href="../resources.html">Resources</a></li>
-                <li><a href="../contact.html">Contact</a></li>
+                <li><a href="/retail/simulator.html">Portfolio Simulator</a></li>
+                <li><a href="/resources.html">Resources</a></li>
+                <li><a href="/contact.html">Contact</a></li>
             </ul>
             <div class="nav-right">
-                <a href="../contact.html" class="cta-button">Advisor Inquiry</a>
+                <a href="/contact.html" class="cta-button">Advisor Inquiry</a>
                 <span id="investor-type-indicator" class="investor-type-indicator retail" style="cursor: pointer;"></span>
             </div>
         </nav>
@@ -200,7 +200,17 @@
     <!-- FOOTER -->
     <footer class="footer">
         <div class="container">
-            <p>First Principle Asset Management · An Invictus Collective Company · Chicago, IL</p>
+            <div style="display: flex; justify-content: space-between; align-items: center; flex-wrap: wrap; gap: 1rem;">
+                <p style="margin: 0;">First Principle Asset Management · An Invictus Collective Company · Chicago, IL</p>
+                <nav style="display: flex; gap: 1.5rem; flex-wrap: wrap;">
+                    <a href="/" style="color: #B0B0B0; text-decoration: none;">Home</a>
+                    <a href="/about.html" style="color: #B0B0B0; text-decoration: none;">About</a>
+                    <a href="/retail/product.html" style="color: #B0B0B0; text-decoration: none;">Strategy</a>
+                    <a href="/retail/simulator.html" style="color: #B0B0B0; text-decoration: none;">Simulator</a>
+                    <a href="/resources.html" style="color: #B0B0B0; text-decoration: none;">Resources</a>
+                    <a href="/contact.html" style="color: #B0B0B0; text-decoration: none;">Contact</a>
+                </nav>
+            </div>
         </div>
     </footer>
 
